2005-05-07  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/systems/unix-jthreads/signal.c (setupSigAltStack),
	kaffe/kaffevm/systems/unix-jthreads/jthread.c (restore_fds_and_exit)
	kaffe/kaffevm/systems/oskit-pthreads/pjthread.c (remove_thread),
	kaffe/jvmpi/jvmpi_kaffe.c (jvmpiProfilerExit),
	config/mips/netbsd1/md.c (sysdepCallMethod),
	kaffe/kaffevm/intrp/icode.h (softcall_breakpoint),
	libraries/clib/net/InetAddressImpl.c (java_net_VMInetAddress_getLocalHostname),
	test/internal/jit_stub.c (main): Renamed ABORT and EXIT to
	KAFFEVM_ABORT and KAFFEVM_EXIT.

2005-05-07  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/kaffe-gc/gc-incremental.c
	(createGC): Fixed constant name.

2005-05-07  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/kaffe-gc/gc-incremental.c
	(reserve): Removed.
	(gcThrowOOM): Use gc_primitive_use_reserve.
	(KaffeGC_Init): Adapted to the new prototype.
	
	* kaffe/kaffevm/kaffe-gc/gc-mem.h
	(KGC_NUMBER_OF_PAGES_IN_RESERVE): New constant.

	* kaffe/kaffevm/kaffe-gc/gc-mem.c
	(gc_reserve_pages): New variable.
	(gc_primitive_reserve): Store the reserved block in a private
	variable.
	(gc_primitive_use_reserve): New function.
	(gc_block_alloc): Update gc_reserve_pages if the block array is
	reallocated.

2005-05-07  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* test/internal/jit_stub.c: Changed ABORT to KAFFEVM_ABORT.

2005-05-07  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	Resynced with GNU Classpath:

	2005-05-05  Chris Burdess  <dog@gnu.org>

	* gnu/xml/transform/StreamSerializer.java: Produce compact,
	human-readable XML for non-UTF/ASCII encodings using NIO.

2005-05-06  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c
	(jthread_exit): Release the thread list lock before exiting.

2005-05-06  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/boehm-gc/boehm/Makefile.am,
	kaffe/kaffevm/boehm-gc/boehm/Makefile.in,
	kaffe/kaffevm/boehm-gc/boehm/aix_irix_threads.c,